# cpp-auto-serializer

./: .gitignore  CMakeLists.txt  README.md
auto/: lexer.l  parser.y
cpp/: main.cc  node.cc  polym.cc  pos_t.cc  types.cc
headers/: node.hh  polym.hh  pos_t.hh  types.hh
test/: CMakeLists.txt  impl_types1.cc  main.cc  types1.hdef  types4.hdef  types4a.hdef  types4b.hdef
tester/: CMakeLists.txt  main.cc  types1.hdef  types2.hdef  types3.hdef  types4.hdef
